--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.15.0",
-    "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
@@ -20,6 +19,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.6"
   },
   "devDependencies": {
