--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.15.0",
+    "axios": "^1.13.0",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
@@ -21,7 +22,9 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
+    "pdf-parse": "^2.4.5",
     "qrcode": "^1.5.4",
+    "stopword": "^3.1.5",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
